--- a/src/vars.less
+++ b/src/vars.less
@@ -1,3 +1,5 @@
+@bp-small: ~'only screen and (min-width: 1012px)';
+
 @primary-color: #2389fe;
 @link-color: black;
 @text-color: #676767;
@@ -6,13 +8,14 @@
 @input-border-color: #d1d5da;
 @bg-color: white;
 @white-darker: #f7f8fa;
-@header-color: @white-darker;
 @heading-color: #202225;
 @sidebar-bg-color: #202225;
 
 @sidebar-zindex: 10;
 @sidebar-width: 200px;
-@topnav-height: 54px;
+
+@header-bg: @bg-color;
+@header-height: 56px;
 
 @extension-width: 360px;
 @extension-height: 600px;
